--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Kamil Warpechowski <k.warpechowski@hakama.pl>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "fast-csv": "^2.4.1",
+    "querystring": "^0.2.0",
     "shuffle-array": "^1.0.1"
   }
 }
